--- a/Jspace/package.json
+++ b/Jspace/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-logger": "^0.5.1",
     "core-js": "^2.4.1",
     "ng2-ace-editor": "^0.1.9",
     "rxjs": "^5.1.0",
