--- a/Jspace/package.json
+++ b/Jspace/package.json
@@ -23,7 +23,8 @@
     "core-js": "^2.4.1",
     "ng2-ace-editor": "^0.1.9",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "esprima": "3.1.3"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
