--- a/circle.yml
+++ b/circle.yml
@@ -4,13 +4,12 @@ general:
 machine:
   node:
     version: 7
-test:
-  pre:
-    - ng serve:
-        background: true
-    - sleep 5
+
+test:  
   override:
-    - ng test
-    - ng e2e
+    # Circle by default will run npm test command,
+    # We want to override it so we can generate coverage as-well.
+    - ng test --code-coverage --single-run
+
   
 
