--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,11 @@ machine:
   node:
     version: 7
 
+dependencies:
+  pre:
+    - npm install npm@latest -g # Should fix bug in ng test
+    - npm install angular-cli@latest -g
+
 test:  
   override:
     # Circle by default will run npm test command,
