--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ test:
   override:
     # Circle by default will run npm test command,
     # We want to override it so we can generate coverage as-well.
+    - cd Jspace
     - ng test --code-coverage --single-run
 
   
