--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,5 @@ test:
   override:
     # Circle by default will run npm test command,sdasdsad
     # We want to override it so we can generate coverage as-well.
-    - cd Jspace && ng test 
+    - ng e2e
+    - cd JSpace && cd Jspace && ng test
