--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ machine:
 dependencies:
   pre:
     - npm install npm@latest -g # Should fix bug in ng test
-    - npm install angular-cli@latest -g
+    - npm install angular/cli@latest -g
 
 test:  
   override:
