--- a/circle.yml
+++ b/circle.yml
@@ -8,11 +8,13 @@ machine:
 dependencies:
   pre:
     - npm install npm@latest -g # Should fix bug in ng test
-    - npm install angular/cli@latest -g
+    - npm install angular-cli@latest -g
 
 test:  
   override:
     # Circle by default will run npm test command,sdasdsad
     # We want to override it so we can generate coverage as-well.
+    - cd Jspace && ng serve && ng e2e
+    - ng serve
     - ng e2e
     - cd JSpace && cd Jspace && ng test
