--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
   pre:
     - npm install npm@latest -g # Should fix bug in ng test
     - npm install -g @angular/cli
+    - npm install webpack -g
 
 test:  
   override:
