--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
   pre:
     - npm install -g @angular/cli
     - npm i -S ng2-ace-editor
+    - npm install tslib
    
 test:  
   override:
