--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,8 @@ dependencies:
   pre:
     - npm install -g @angular/cli
     - npm install tslib
+    pre:
+    - curl -s https://raw.githubusercontent.com/chronogolf/circleci-google-chrome/master/use_chrome_stable_version.sh | bash
    
 test:  
   override:
