--- a/Server/package.json
+++ b/Server/package.json
@@ -4,19 +4,11 @@
   "description": "This is the server for JSpace",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "jade": "^1.11.0",
-    "mongodb": "^2.2.28",
-    "mongoose": "^4.10.7"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
+    "express": "^4.15.2"
   }
 }
