--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ machine:
 
 dependencies:
   pre:
+    - cd .. npm install express
     - cd .. && cd Server && node server.js
     - npm install -g @angular/cli
     - npm install tslib
