--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,8 @@ machine:
 
 dependencies:
   pre:
-    - cd .. npm install express
-    - cd .. && cd Server && node server.js
+    
+    - cd .. && cd Server &&  npm install express && node server.js
     - npm install -g @angular/cli
     - npm install tslib
     - curl -s https://raw.githubusercontent.com/chronogolf/circleci-google-chrome/master/use_chrome_stable_version.sh | bash
