--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ machine:
 dependencies:
   pre:
     
-    - cd .. && cd Server &&  npm install express && npm install esprima && node server.js
+    - cd .. && cd Server &&  npm install express && npm install esprima && npm install body-parser && node server.js
     - npm install -g @angular/cli
     - npm install tslib
     - curl -s https://raw.githubusercontent.com/chronogolf/circleci-google-chrome/master/use_chrome_stable_version.sh | bash
