--- a/circle.yml
+++ b/circle.yml
@@ -7,9 +7,10 @@ machine:
 
 dependencies:
   pre:
-    
-    - cd .. && cd Server &&  npm install express && npm install esprima && npm install body-parser 
-    #- cd .. && cd Server && node server.js
+    - cd .. && npm install
+    #- cd .. && cd Server &&  npm install express && npm install esprima && npm install body-parser 
+    - cd .. && cd Server && node server.js:
+      backgound: true
     - npm install -g @angular/cli
     - npm install tslib
     - curl -s https://raw.githubusercontent.com/chronogolf/circleci-google-chrome/master/use_chrome_stable_version.sh | bash
@@ -17,6 +18,6 @@ dependencies:
 test:  
   override:
     - ng test --single-run
-    - cd .. && cd Server && node server.js
+    
     - ng e2e
     
