[JSpqce] failing tests and pipline test (#71)
* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* fixed taskPrintAlienObject

--- a/circle.yml
+++ b/circle.yml
@@ -7,12 +7,18 @@ machine:
 
 dependencies:
   pre:
+    - cd .. && cd Server && npm install
+    - cd .. && cd Server &&  npm install express && npm install esprima && npm install body-parser 
     - npm install -g @angular/cli
     - npm install tslib
     - curl -s https://raw.githubusercontent.com/chronogolf/circleci-google-chrome/master/use_chrome_stable_version.sh | bash
    
-test:  
+test:
+  pre:
+    - cd .. && cd Server && npm start:
+        background: true
+    - sleep 5  
+    
   override:
     - ng test --single-run
-    #- ng e2e
-    
+    - ng e2e
